--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -6,4 +6,5 @@ Version 3.0		08-06-2012	Added option to set duedays by Project/category
 Version 3.1		05-07-2012	Extended the project/category option with Priority
 Version 4.01		24-01-2017	Compatibility with Mantis 2.x
 Version 4.02				Bugfixes
-Version 4.03		08-12-2020	Improved compatibility	
+Version 4.03		08-12-2020	Improved compatibility
+Version 4.04	01-06-2023	Added option to bypass Duedate setting on global level	
