--- a/lang/strings_english.txt
+++ b/lang/strings_english.txt
@@ -14,4 +14,5 @@
 	$s_duedate_disabled= 'No'; 
 	$s_overrule_duedate = 'Adjust duedate after each update';
 	$s_skip_duedate = 'Skip calculation of Duedate on Global Level (if no settings are made on project/category level)';
+	$s_duedate_config = 'Yes';
 
